# octaplus

./: .gitignore  README.md
.github/workflows/: deploy.yml
fixtures/: hour_two_days.json  in_fault_days.json  mixed_days.json  quarter_hour_one_day.json
js/: README.md  package-lock.json  package.json
js/src/: client.js  dates.js  discover.js  errors.js  granularity.js  index.js  parse.js
js/test/: client.test.js  discover.test.js  parse.test.js
python/: README.md  pyproject.toml
python/examples/: earliest.py  fetch_today.py
python/src/octaplus/: __init__.py  _client.py  _discover.py  _errors.py  _models.py  _parse.py
python/tests/: test_client.py  test_discover.py  test_parse.py
rust/: Cargo.toml  README.md
rust/examples/: earliest.rs  fetch_today.rs
rust/src/: client.rs  error.rs  lib.rs  models.rs  parse.rs
rust/tests/: client.rs  discover.rs
scripts/: download-dataset.mjs
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/public/data/: hour.json  quarter_hour.json
web/src/: App.vue  main.js
web/src/components/: AppFooter.vue  AppTooltip.vue  CheapWindowPanel.vue  ControlRail.vue  DistributionPanel.vue  DualRange.vue  HeatmapPanel.vue  KpiStrip.vue  MastHead.vue  NoData.vue  PanelFrame.vue  ProfilePanel.vue  SegToggle.vue  SpreadPanel.vue  TimelinePanel.vue
web/src/composables/: useControls.js  useElementSize.js  usePriceData.js  useSelection.js  useTooltip.js
web/src/lib/: analysis.js  colors.js
web/src/styles/: base.css
web/test/: analysis.test.js  snapshot.test.js
