[project]
name = "octaplus"
version = "0.1.0"
description = "Python SDK for the Octaplus dynamic-tariff quotations API"
requires-python = ">=3.10"
dependencies = ["httpx>=0.24"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
